@@ -4,7 +4,7 @@
 ## Author:      Mattia Barbon
 ## Modified by:
 ## Created:     04/05/2001
-## RCS-ID:      $Id: typemap,v 1.10 2005/01/09 23:57:02 mbarbon Exp $
+## RCS-ID:      $Id: typemap,v 1.11 2005/03/14 20:59:27 mbarbon Exp $
 ## Copyright:   (c) 2001, 2003-2005 Mattia Barbon
 ## Licence:     This program is free software; you can redistribute it and/or
 ##              modify it under the same terms as Perl itself
@@ -14,17 +14,23 @@ TYPEMAP
 wxPrintData *           O_WXOBJECT
 wxPageSetupDialogData * O_WXOBJECT
 wxPageSetupDialog *     O_WXOBJECT
+wxPageSetupDialogBase * O_WXOBJECT
 wxPrinter *             O_WXOBJECT
+wxPrinterBase *         O_WXOBJECT
 wxPrintDialogData *     O_WXOBJECT
 wxPrintout *            O_WXOBJECT
 wxPrintPreview *        O_WXOBJECT
-wxPrintPreview *        O_WXOBJECT
+wxPrintPreviewBase *    O_WXOBJECT
 wxPrinterDC *           O_WXOBJECT
 wxPrintDialog *         O_WXOBJECT
+wxPrintDialogBase *     O_WXOBJECT
 wxPreviewControlBar *   O_WXOBJECT
+wxPlPreviewControlBar * O_WXOBJECT
 wxPreviewCanvas *       O_WXOBJECT
 wxPreviewCanvas *       O_WXOBJECT
 wxPreviewFrame *        O_WXOBJECT
+wxPlPreviewFrame *      O_WXOBJECT
+wxPrintFactory *        O_NON_WXOBJECT
 
 wxDuplexMode            T_ENUM
 wxPaperSize             T_ENUM
